Fixed word overflow on user index page

--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -50,6 +50,9 @@
 .user-index-fullname {
   font-size: 15px;
   color: rgb(170, 170, 170);
+  text-size-adjust: none;
+  width: 550px;
+  word-wrap: break-word;
 }
 
 .user-index-follow-link {
